@@ -1,3 +1,7 @@
+trunk (unreleased):
+* [xen] Provide functions that C code often uses for asserts (abort, printf,
+  etc).
+
 2.0.0 (04-Nov-2014):
 * Remove dietlibc, libm and most of the include files, replacing them with
   external dependencies on Mini-OS and openlibm.
